--- a/package.json
+++ b/package.json
@@ -12,11 +12,12 @@
   "license": "ISC",
   "dependencies": {
     "@types/node": "^18.0.6",
-    "axios": "^1.5.1",
-    "readline": "latest",
+    "axios": "latest",
     "node-cron": "latest",
     "pidusage": "latest",
-    "puppeteer": "^21.3.8",
-    "random-useragent": "^0.5.0"
+    "useragent": "latest",
+    "puppeteer": "latest",
+    "random-useragent": "latest",
+    "readline": "latest"
   }
 }
