--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "jagobot",
-  "version": "1.2.1",
-  "description": "",
+  "version": "1.2.2",
+  "description": "Organic visitors for adsense",
   "main": "bot.js",
   "scripts": {
     "start": "node bot.js",
