--- a/config.json
+++ b/config.json
@@ -1,4 +1,4 @@
 {
-  "status": false,
-  "token": "xxxxxx-xxxxx-xxxx-xxxxxxxx"
+  "status": true,
+  "token": "6b8a12cc-6b34-499b-bf43-6e193b138ee7"
 }
