--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "jagobot",
-  "version": "1.2.2",
+  "version": "1.3.5",
   "description": "Organic visitors for adsense",
   "main": "bot.js",
   "scripts": {
@@ -15,7 +15,7 @@
     "axios": "latest",
     "node-cron": "latest",
     "useragent": "latest",
-    "puppeteer": "^21.3.8",
+    "puppeteer": "latest",
     "readline": "latest"
   }
 }
