--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,6 @@
 node_modules/
 
-./json/dataUrl.json
-./json/dataProxy.json
-
-./config.json
+json/dataUrl.json
+json/dataProxy.json
+config.json
 package-lock.json
