--- a/config.json
+++ b/config.json
@@ -1,4 +1,4 @@
 {
-  "status": true,
-  "token": "bfe15aeb-3353-4bc8-b5ce-c1a6cb6405a8"
+  "status": false,
+  "token": "xxxx-xxxxx-xxx-xxxx-xxx"
 }
